# api

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.zsh  compose.yml  go.mod  go.sum  main.go  readme.md
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: Card.md  CardApi.md  CardCreate.md  CardList.md  CardOwnerRead.md  CardRead.md  CardUpdate.md  CreateCardRequest.md  CreateGroupRequest.md  CreateUeRequest.md  CreateUserRequest.md  Group.md  GroupApi.md  GroupCreate.md  GroupList.md  GroupRead.md  GroupUpdate.md  GroupUsersList.md  ListCard400Response.md  Ue.md  UeApi.md  UeCreate.md  UeList.md  UeOwnerRead.md  UeRead.md  UeUpdate.md  UpdateCardRequest.md  UpdateGroupRequest.md  UpdateUeRequest.md  UpdateUserRequest.md  User.md  UserApi.md  UserCardList.md  UserCreate.md  UserList.md  UserRead.md  UserUeList.md  UserUpdate.md
openapi/src/apis/: card_api.rs  configuration.rs  group_api.rs  mod.rs  ue_api.rs  user_api.rs
openapi/src/models/: card.rs  card_create.rs  card_list.rs  card_owner_read.rs  card_read.rs  card_update.rs  create_card_request.rs  create_group_request.rs  create_ue_request.rs  create_user_request.rs  group.rs  group_create.rs  group_list.rs  group_read.rs  group_update.rs  group_users_list.rs  list_card_400_response.rs  mod.rs  ue.rs  ue_create.rs  ue_list.rs  ue_owner_read.rs  ue_read.rs  ue_update.rs  update_card_request.rs  update_group_request.rs  update_ue_request.rs  update_user_request.rs  user.rs  user_card_list.rs  user_create.rs  user_list.rs  user_read.rs  user_ue_list.rs  user_update.rs
(+81 files in other folders)
